sections-about-skills-portfolio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,37 @@
         <h1>Personal trainer</h1>
         <p>Providing help with becoming your fittest self</p>
     </section>
-    
+    <section id="skills">
+        <h1>Provide info on:</h1>
+        <div class="skill">
+            <h2>Excercises</h2>
+            <p>Specialisation in calistenics</p>
+        </div>
+        <div class="skill">
+            <h2>Nutrition</h2>
+            <p>Providing nutrition information</p>
+        </div>
+        <div class="skill">
+            <h2>Motivation</h2>
+            <p>Using the best motivational techniques</p>
+        </div>
+        <div class="skill">
+            <h2>Efficient time management</h2>
+            <p>Using the best systems for fast results</p>
+        </div>
+    </section>  
+    <section id="portfolio">
+        <h1>Providing the best guidance</h1>
+        <div class="portfolio-item">
+            <img src="gym.jpg" alt="gym">
+        </div>
+        <div class="portfolio-item">
+            <img src="muscles.jpg" alt="muscles">
+        </div>
+        <div class="portfolio-item">
+            <img src="nutrition.jpg" alt="nutrition">
+        </div>
+    </section>
 
 </body>
 </html>
