--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@
             <img src="nutrition.jpg" alt="nutrition">
         </div>
     </section>
+    <section id="contact">
+        <h1>Ed Chan</h1>
+        <adress>
+            Palo Alto Santa Cruz 7
+            California
+            United States
+        </adress>
+        <form action="/action_page.php">
+            <label for="imie">Imię:</label><br>
+            <input type="text" name="imie" id="imie" required/>
+            <label for="temat">Temat</label><br>
+            <input type="text" name="temat" id="temat" required/>
+            <label for="wiadomosc">Wiadomość</label><br>
+            <input type="text" name="wiadomosc" id="wiadomosc" required/>
+            <input type="Submit">
+        </form>
+    </section>
 
 </body>
 </html>
