--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="#about">About us</a>
         <a href="#skills">Skills</a>
         <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</href>
+        <a href="#contact">Contact</a>
     </nav>
     <section id="about">
         <h1>Personal trainer</h1>
@@ -51,20 +51,19 @@
     <section id="contact">
         <h1>Ed Chan</h1>
         <adress>
-            Palo Alto Santa Cruz 7
-            California
+            Palo Alto Santa Cruz 7<br>
+            California<br>
             United States
-        </adress>
+        </adress><br>
         <form action="/action_page.php">
             <label for="imie">Imię:</label><br>
-            <input type="text" name="imie" id="imie" required/>
+            <input type="text" name="imie" id="imie" required><br>
             <label for="temat">Temat</label><br>
-            <input type="text" name="temat" id="temat" required/>
+            <input type="text" name="temat" id="temat" required><br>
             <label for="wiadomosc">Wiadomość</label><br>
-            <input type="text" name="wiadomosc" id="wiadomosc" required/>
-            <input type="Submit">
+            <input type="text" name="wiadomosc" id="wiadomosc" required><br>
+            <input type="submit">
         </form>
     </section>
-
 </body>
 </html>
