html-prosta-strona

--- a/index.html
+++ b/index.html
@@ -8,36 +8,38 @@
 </head>
 <body>
     <nav> 
-        <a href="#about">About us</a>
-        <a href="#skills">Skills</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
+        <ul>
+        <li><a href="#about">About us</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+        </ul>
     </nav>
     <section id="about">
         <h1>Personal trainer</h1>
         <p>Providing help with becoming your fittest self</p>
     </section>
     <section id="skills">
-        <h1>Provide info on:</h1>
+        <h2>Provide info on:</h2>
         <div class="skill">
-            <h2>Excercises</h2>
+            <h3>Excercises</h3>
             <p>Specialisation in calistenics</p>
         </div>
         <div class="skill">
-            <h2>Nutrition</h2>
+            <h3>Nutrition</h3>
             <p>Providing nutrition information</p>
         </div>
         <div class="skill">
-            <h2>Motivation</h2>
+            <h3>Motivation</h3>
             <p>Using the best motivational techniques</p>
         </div>
         <div class="skill">
-            <h2>Efficient time management</h2>
+            <h3>Efficient time management</h3>
             <p>Using the best systems for fast results</p>
         </div>
     </section>  
     <section id="portfolio">
-        <h1>Providing the best guidance</h1>
+        <h2>Providing the best guidance</h2>
         <div class="portfolio-item">
             <img src="gym.jpg" alt="gym">
         </div>
